--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "med-booklet",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://klikvus.github.io/med-booklet/",
+  "homepage": "https://med-booklet.vercel.app//",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
@@ -19,8 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "react-scripts build",
-    "deploy": "gh-pages -d build",
+    "deploy": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
